name:                reflex-basic-host
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Host.Basic
  build-depends:       base >=4.9 && <4.10
                     , primitive >= 0.6 && < 0.7
                     , ref-tf >= 0.4 && < 0.5
                     , dependent-sum >= 0.4 && < 0.5
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.6
  hs-source-dirs:      src
  ghc-options:         -Wall -O
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-basic-host
  hs-source-dirs:      example
  ghc-options:         -Wall -O
  default-language:    Haskell2010
