name:                reflex-basic-host
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Host.Basic
                     , Reflex.Host.Subhost
  build-depends:       base >=4.9 && <5
                     , primitive >= 0.6 && < 0.7
                     , ref-tf >= 0.4 && < 0.5
                     , dependent-sum >= 0.4 && < 0.5
                     , mtl >= 2.2 && < 2.3
                     , stm >= 2.4 && < 2.5
                     , these >= 0.7 && < 0.8
                     , reflex >= 0.5 && < 0.6
  hs-source-dirs:      src
  ghc-options:         -Wall -O
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-basic-host
  hs-source-dirs:      example
  ghc-options:         -Wall -O
  default-language:    Haskell2010

executable subhost
  main-is:             Subhost.hs
  build-depends:       base >=4.9 && <5
                     , mtl >= 2.2 && < 2.3
                     , containers >= 0.5 && < 0.6
                     , time >= 1.6 && < 1.7
                     , reflex >= 0.5 && < 0.6
                     , reflex-basic-host
  hs-source-dirs:      example
  ghc-options:         -Wall -O
  default-language:    Haskell2010
