name:                reflex-basic-host
version:             0.2
license:             BSD3
license-file:        LICENCE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
category:            FRP
synopsis:            A basic `reflex` host for backend work
description:         A basic `reflex` host for backend work.

tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.4

source-repository    head
  type:              git
  location:          git@github.com:qfpl/reflex-basic-host.git

library
  exposed-modules:     Reflex.Host.Basic
  build-depends:       base >=4.9 && <4.13
                     , dependent-map >= 0.2 && < 0.3
                     , dependent-sum >= 0.4 && < 0.5
                     , lens >= 3.6 && < 4.18
                     , mtl >= 2.2 && < 2.3
                     , primitive >= 0.6 && < 0.7
                     , ref-tf >= 0.4 && < 0.5
                     , reflex >= 0.5 && < 0.7
                     , stm >= 2.4 && < 2.6
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.7
                     , reflex-basic-host
  hs-source-dirs:      example
  ghc-options:         -Wall
  default-language:    Haskell2010

executable counter
  main-is:             Counter.hs
  build-depends:       base >=4.9 && <4.13
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.5 && < 0.7
                     , reflex-basic-host
  hs-source-dirs:      example
  ghc-options:         -Wall
  default-language:    Haskell2010

executable multithread
  main-is:             Multithread.hs
  build-depends:       base >=4.9 && <4.13
                     , lens >= 3.6 && < 4.18
                     , mtl >= 2.2 && < 2.3
                     , ref-tf >= 0.4 && < 0.5
                     , reflex >= 0.5 && < 0.7
                     , reflex-basic-host
                     , witherable >= 0.2 && < 0.3
  hs-source-dirs:      example
  ghc-options:         -Wall
  default-language:    Haskell2010
